tests/snapshots/integration__integration_tests__shell_wrapper__tests__bash_shell_integration_hint_suppressed.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
[32m✓[39m [32mCreated new worktree for [1mbash-test[22m from [1mmain[22m @ [1m[TMPDIR]/repo.bash-test[22m[39m
[2m↳[22m [2mCustomize worktree locations: [90mwt config create[39m[22m
