tests/snapshots/integration__integration_tests__shell_wrapper__tests__command_failure.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
[31m✗[39m [31mBranch [1mexisting[22m already exists[39m
[2m↳[22m [2mTo switch to the existing branch, remove [90m--create[39m; run [90mwt switch existing[39m[22m
