tests/snapshots/integration__integration_tests__shell_wrapper__tests__fish_wrapper_preserves_progress_messages.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
[32m✓[39m [32mCreated new worktree for [1mfish-bg[22m from [1mmain[22m @ [1m[TMPDIR]/repo.fish-bg[22m[39m
[2m↳[22m [2mCustomize worktree locations: [90mwt config create[39m[22m
[36m◎[39m [36mRunning post-start project hook:[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'fish background task'[0m[2m
