tests/snapshots/integration__integration_tests__shell_wrapper__tests__merge_with_mixed_stdout_stderr_zsh.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
[36m◎[39m [36mRunning pre-merge [1mproject:check1[22m:[39m
[107m [0m [2m[0m[2m[34m[TMPDIR]/repo/mixed-output.sh[0m[2m check1 3
[check1] stdout line 1
[check1] stderr line 1
[check1] stdout line 2
[check1] stderr line 2
[check1] stdout line 3
[check1] stderr line 3
[check1] stdout complete
[check1] stderr complete
[36m◎[39m [36mRunning pre-merge [1mproject:check2[22m:[39m
[107m [0m [2m[0m[2m[34m[TMPDIR]/repo/mixed-output.sh[0m[2m check2 3
[check2] stdout line 1
[check2] stderr line 1
[check2] stdout line 2
[check2] stderr line 2
[check2] stdout line 3
[check2] stderr line 3
[check2] stdout complete
[check2] stderr complete
[36m◎[39m [36mMerging 1 commit to [1mmain[22m @ [2m[HASH][22m (no commit/squash/rebase needed)[39m
[107m [0m * [33m[HASH][m Add feature file
[107m [0m  feature.txt | 1 [32m+[m
[107m [0m  1 file changed, 1 insertion(+)
[32m✓[39m [32mMerged to [1mmain[22m [90m(1 commit, 1 file, [32m+1[39m[39m[90m)[39m[39m
[36m◎ Removing [1mfeature[22m worktree & branch in background (same commit as [1mmain[22m,[39m [2m_[22m[36m)[39m
[2m○[22m Switched to worktree for [1mmain[22m @ [1m[TMPDIR]/repo[22m
