tests/snapshots/integration__integration_tests__shell_wrapper__tests__merge_with_pre_merge_failure_zsh.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
[36m◎[39m [36mRunning pre-merge [1mproject:format[22m:[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'✓ Code formatting check passed'[0m[2m
✓ Code formatting check passed
[36m◎[39m [36mRunning pre-merge [1mproject:test[22m:[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'✗ Test suite failed: 3 tests failing'[0m[2m [0m[2m[36m&&[0m[2m [0m[2m[34mexit[0m[2m 1
✗ Test suite failed: 3 tests failing
[31m✗[39m [31mpre-merge command failed: [1mtest[22m: exit status: 1[39m
[2m↳[22m [2mTo skip pre-merge hooks, re-run with [90m--no-verify[39m[22m
